# supermercado-engagement

./: README.md  model_fecha.pkl  model_fecha_csv.pkl  predicciones_clientes.parquet  predicciones_clientes_ensemble.parquet  pyproject.toml  requirements.txt  top_productos.pkl
docker/: Dockerfile
docs/: documentacion.md
etl/: extractor.py  loader.py  transformer.py
lambda/: app.py
model/: generate_predictions.py  predictor.py  training.py
notebooks/: analisis_exploratorio.ipynb  clientes_recurrentes.parquet
resultados/: model_fecha_parquet.pkl  top_productos_parquet.pkl
tests/: test_extractor.py  test_loader.py  test_predictor.py  test_training.py  test_transformer.py
