# pyproject.toml

[project]
name = "supermercado-engagement"
version = "0.1.0"
description = "ETL para clientes recurrentes - Okuo assessment"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "boto3",
    "pyarrow"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
pretty = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # Si prefieres ignorar líneas largas

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
